--- a/main.html
+++ b/main.html
@@ -11,6 +11,50 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<form method="post">
+
+			<div>
+				<label for="name">name</label>
+				<input type="text" id="name" placeholder="Name">
+			</div>
+		<br>
+
+		<div>
+			<label for="phone">Phone</label>
+			<input type="text" id="phone" placeholder="Phone Number">
+		</div>
+		<br>
+
+		<div>
+			<label for="address">address</label>
+			<input type="text" id="address" placeholder="Address">
+		</div>
+		<br>
+
+		<div>
+			<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+			<label for="checkbox">Have you ever lived with a Dog before?</label>
+			
+		</div>
+		<br>
+
+		<div>
+			<label for="multiSelect">Select your preferred breed</label>
+			<select id="multiSelect" multiple>
+				<option value="dog">dog</option>
+				<option value="cat">cat</option>
+				<option value="pig">pig</option>
+			
+			</select>
+		</div>
+		<br>
+
+	<div>
+		<label for="submit">submit</label>
+		<input type="submit" value="Submit" id="submit">
+	</div>
+
+	</form>
 </body>
 
 </html>
